Fix main content height on IOS

--- a/src/app/layout/styles/_content.scss
+++ b/src/app/layout/styles/_content.scss
@@ -12,7 +12,7 @@
     height: 100%;
     @media (min-width: 768px) {
         &.footer-active {
-            height: 90vh;
+            height: 90%;
         }
     }
 
